# Docquer

./: .gitignore  README.md
client/: .env  firebase.ts  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
client/src/: App.tsx  index.css  main.tsx
client/src/api/: auth.ts  llm.ts
client/src/components/: Bento.tsx  Button.tsx  Chart.tsx  ChatCard.tsx  Footer.tsx  Form.tsx  MDRender.tsx  Modal.tsx  Navbar.tsx  ProfileBento.tsx  Sidebar.tsx  writingText.tsx
client/src/constants/: chatHistory.ts  links.ts
client/src/context/: ThemeProvider.tsx
client/src/pages/: About.tsx  Auth.tsx  Chat.tsx  Chats.tsx  Contact.tsx  Home.tsx  NotFound.tsx  Profile.tsx
server/: .gitignore  pyproject.toml  requirements.txt  vercel.json
server/src/: app.py  db.py  pineconedb.py
server/src/llm/: constants.py  model.py
server/src/models/: Chat.py  User.py
server/src/routes/: auth.py  llm.py
